--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "main": "src/index.js",
   "dependencies": {
     "bulma": "0.8.0",
+    "postcss": "7.0.26",
+    "postcss-cssnext": "3.1.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-scripts": "3.0.1",
